@@ -1,14 +1,10 @@
 package no.nav.bidrag.beregn.forskudd.core.beregning;
 
-import static java.util.stream.Collectors.toList;
-import static no.nav.bidrag.beregn.felles.enums.BostatusKode.ENSLIG_ASYLANT;
-import static no.nav.bidrag.beregn.felles.enums.BostatusKode.MED_FORELDRE;
+import static no.nav.bidrag.beregn.felles.enums.BostatusKode.BOR_MED_FORELDRE;
 import static no.nav.bidrag.beregn.felles.enums.SivilstandKode.ENSLIG;
 import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.AVSLAG;
 import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.FORHOYET_FORSKUDD_100_PROSENT;
 import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.FORHOYET_FORSKUDD_11_AAR_125_PROSENT;
-import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.FORSKUDD_ENSLIG_ASYLANT_11_AAR_250_PROSENT;
-import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.FORSKUDD_ENSLIG_ASYLANT_200_PROSENT;
 import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.ORDINAERT_FORSKUDD_75_PROSENT;
 import static no.nav.bidrag.beregn.forskudd.core.enums.ResultatKode.REDUSERT_FORSKUDD_50_PROSENT;
 
@@ -21,7 +17,6 @@ import no.nav.bidrag.beregn.felles.SjablonUtil;
 import no.nav.bidrag.beregn.felles.bo.Periode;
 import no.nav.bidrag.beregn.felles.bo.SjablonPeriode;
 import no.nav.bidrag.beregn.felles.bo.SjablonPeriodeNavnVerdi;
-import no.nav.bidrag.beregn.felles.enums.BostatusKode;
 import no.nav.bidrag.beregn.felles.enums.SivilstandKode;
 import no.nav.bidrag.beregn.felles.enums.SjablonTallNavn;
 import no.nav.bidrag.beregn.forskudd.core.bo.GrunnlagBeregning;
@@ -73,29 +68,23 @@ public class ForskuddBeregningImpl implements ForskuddBeregning {
       resultatKode = AVSLAG;
       regel = "REGEL 1";
 
-      // Søknadsbarn er enslig asylant (REGEL 2/3)
-    } else if (grunnlag.getSoknadBarnBostatus().getKode().equals(ENSLIG_ASYLANT)) {
-      resultatKode = (grunnlag.getSoknadBarnAlder().getAlder() >= 11) ? FORSKUDD_ENSLIG_ASYLANT_11_AAR_250_PROSENT
-          : FORSKUDD_ENSLIG_ASYLANT_200_PROSENT;
-      regel = (resultatKode.equals(FORSKUDD_ENSLIG_ASYLANT_11_AAR_250_PROSENT) ? "REGEL 2" : "REGEL 3");
-
-      // Søknadsbarn bor alene eller ikke med foreldre (REGEL 4/5)
-    } else if (!(grunnlag.getSoknadBarnBostatus().getKode().equals(MED_FORELDRE))) {
+      // Søknadsbarn bor alene eller ikke med foreldre (REGEL 2/3)
+    } else if (!(grunnlag.getSoknadBarnBostatus().getKode().equals(BOR_MED_FORELDRE))) {
       resultatKode =
           (grunnlag.getSoknadBarnAlder().getAlder() >= 11) ? FORHOYET_FORSKUDD_11_AAR_125_PROSENT : FORHOYET_FORSKUDD_100_PROSENT;
-      regel = (resultatKode.equals(FORHOYET_FORSKUDD_11_AAR_125_PROSENT) ? "REGEL 4" : "REGEL 5");
+      regel = (resultatKode.equals(FORHOYET_FORSKUDD_11_AAR_125_PROSENT) ? "REGEL 2" : "REGEL 3");
 
-      // Over maks inntektsgrense for forskudd (REGEL 6)
+      // Over maks inntektsgrense for forskudd (REGEL 4)
     } else if (!(erUnderInntektsGrense(maksInntektsgrense, bidragMottakerInntekt))) {
       resultatKode = AVSLAG;
-      regel = "REGEL 6";
+      regel = "REGEL 4";
 
-      // Under maks inntektsgrense for fullt forskudd (REGEL 7/8)
+      // Under maks inntektsgrense for fullt forskudd (REGEL 5/6)
     } else if (erUnderInntektsGrense(inntektsgrense100ProsentForskuddBelop, bidragMottakerInntekt)) {
       resultatKode = (grunnlag.getSoknadBarnAlder().getAlder() >= 11) ? FORHOYET_FORSKUDD_11_AAR_125_PROSENT : FORHOYET_FORSKUDD_100_PROSENT;
-      regel = (resultatKode.equals(FORHOYET_FORSKUDD_11_AAR_125_PROSENT) ? "REGEL 7" : "REGEL 8");
+      regel = (resultatKode.equals(FORHOYET_FORSKUDD_11_AAR_125_PROSENT) ? "REGEL 5" : "REGEL 6");
 
-      // Resterende regler (gift/enslig) (REGEL 9/10/11/12/13/14/15/16)
+      // Resterende regler (gift/enslig) (REGEL 7/8/9/10/11/12/13/14)
     } else {
       resultatKode = (erUnderInntektsGrense(
           settInntektsgrense(grunnlag.getSivilstand().getKode(), inntektsgrenseEnslig75ProsentForskuddBelop,
@@ -103,20 +92,20 @@ public class ForskuddBeregningImpl implements ForskuddBeregning {
           : REDUSERT_FORSKUDD_50_PROSENT;
       if (grunnlag.getSivilstand().getKode().equals(ENSLIG)) {
         if (grunnlag.getBarnIHusstanden().getAntall() == 1) {
-          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 9" : "REGEL 10");
+          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 7" : "REGEL 8");
         } else {
-          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 11" : "REGEL 12");
+          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 9" : "REGEL 10");
         }
       } else {
         if (grunnlag.getBarnIHusstanden().getAntall() == 1) {
-          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 13" : "REGEL 14");
+          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 11" : "REGEL 12");
         } else {
-          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 15" : "REGEL 16");
+          regel = (resultatKode.equals(ORDINAERT_FORSKUDD_75_PROSENT) ? "REGEL 13" : "REGEL 14");
         }
       }
     }
 
-    return new ResultatBeregning(beregnForskudd(resultatKode, forskuddssats75ProsentBelop, forskuddssats100ProsentBelop), resultatKode, regel,
+    return new ResultatBeregning(beregnForskudd(resultatKode, forskuddssats75ProsentBelop), resultatKode, regel,
         byggSjablonListe(grunnlag.getSjablonListe()));
   }
 
@@ -124,16 +113,16 @@ public class ForskuddBeregningImpl implements ForskuddBeregning {
   private void hentSjablonVerdier(List<SjablonPeriode> sjablonPeriodeListe) {
     var sjablonListe = sjablonPeriodeListe.stream()
         .map(SjablonPeriode::getSjablon)
-        .collect(toList());
+        .toList();
     forskuddssats75ProsentBelop = SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.FORSKUDDSSATS_75PROSENT_BELOP);
     forskuddssats100ProsentBelop = SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.FORSKUDDSSATS_BELOP);
-    maksInntektForskuddMottakerMultiplikator = SjablonUtil
-        .hentSjablonverdi(sjablonListe, SjablonTallNavn.MAKS_INNTEKT_FORSKUDD_MOTTAKER_MULTIPLIKATOR);
+    maksInntektForskuddMottakerMultiplikator =
+        SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.MAKS_INNTEKT_FORSKUDD_MOTTAKER_MULTIPLIKATOR);
     inntektsgrense100ProsentForskuddBelop = SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.OVRE_INNTEKTSGRENSE_FULLT_FORSKUDD_BELOP);
-    inntektsgrenseEnslig75ProsentForskuddBelop = SjablonUtil
-        .hentSjablonverdi(sjablonListe, SjablonTallNavn.OVRE_INNTEKTSGRENSE_75PROSENT_FORSKUDD_EN_BELOP);
-    inntektsgrenseGiftSamboer75ProsentForskuddBelop = SjablonUtil
-        .hentSjablonverdi(sjablonListe, SjablonTallNavn.OVRE_INNTEKTSGRENSE_75PROSENT_FORSKUDD_GS_BELOP);
+    inntektsgrenseEnslig75ProsentForskuddBelop =
+        SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.OVRE_INNTEKTSGRENSE_75PROSENT_FORSKUDD_EN_BELOP);
+    inntektsgrenseGiftSamboer75ProsentForskuddBelop =
+        SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.OVRE_INNTEKTSGRENSE_75PROSENT_FORSKUDD_GS_BELOP);
     inntektsintervallForskuddBelop = SjablonUtil.hentSjablonverdi(sjablonListe, SjablonTallNavn.INNTEKTSINTERVALL_FORSKUDD_BELOP);
   }
 
@@ -172,25 +161,18 @@ public class ForskuddBeregningImpl implements ForskuddBeregning {
   // Forskudd 50%  = Sjablon 0038 * 2/3
   // Forskudd 75%  = Sjablon 0038
   // Forskudd 100% = Sjablon 0038 * 4/3
-  // Forskudd 125% = (Sjablon 0038 * 1/3) + Sjablon 0005)
-  // Forskudd 200% = Sjablon 0005 * 2
-  // Forskudd 250% = ((Sjablon 0038 * 1/3) + Sjablon 0005) (avrundet opp) * 2
-  private static BigDecimal beregnForskudd(ResultatKode resultatKode, BigDecimal forskuddssats75ProsentBelop,
-      BigDecimal forskuddssats100ProsentBelop) {
+  // Forskudd 125% = Sjablon 0038 * 5/3
+  private static BigDecimal beregnForskudd(ResultatKode resultatKode, BigDecimal forskuddssats75ProsentBelop) {
     return switch (resultatKode) {
-      case REDUSERT_FORSKUDD_50_PROSENT -> forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(0.66666666)).setScale(-1, RoundingMode.HALF_UP);
+      case REDUSERT_FORSKUDD_50_PROSENT ->
+          forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(2)).divide(BigDecimal.valueOf(3), -1, RoundingMode.HALF_UP);
       case ORDINAERT_FORSKUDD_75_PROSENT -> forskuddssats75ProsentBelop;
-      case FORHOYET_FORSKUDD_100_PROSENT -> forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(1.33333333)).setScale(-1, RoundingMode.HALF_UP);
-      case FORHOYET_FORSKUDD_11_AAR_125_PROSENT -> beregnForskudd11Aar125Prosent(forskuddssats75ProsentBelop, forskuddssats100ProsentBelop);
-      case FORSKUDD_ENSLIG_ASYLANT_200_PROSENT -> forskuddssats100ProsentBelop.multiply(BigDecimal.valueOf(2)).setScale(-1, RoundingMode.HALF_UP);
-      case FORSKUDD_ENSLIG_ASYLANT_11_AAR_250_PROSENT -> beregnForskudd11Aar125Prosent(forskuddssats75ProsentBelop, forskuddssats100ProsentBelop)
-          .multiply(BigDecimal.valueOf(2)).setScale(-1, RoundingMode.HALF_UP);
+      case FORHOYET_FORSKUDD_100_PROSENT ->
+          forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(4)).divide(BigDecimal.valueOf(3), -1, RoundingMode.HALF_UP);
+      case FORHOYET_FORSKUDD_11_AAR_125_PROSENT ->
+          forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(5)).divide(BigDecimal.valueOf(3), -1, RoundingMode.HALF_UP);
       default -> BigDecimal.ZERO;
     };
-  }
-
-  private static BigDecimal beregnForskudd11Aar125Prosent(BigDecimal forskuddssats75ProsentBelop, BigDecimal forskuddssats100ProsentBelop) {
-    return forskuddssats75ProsentBelop.multiply(BigDecimal.valueOf(0.33333333)).add(forskuddssats100ProsentBelop).setScale(-1, RoundingMode.HALF_UP);
   }
 
   private static boolean erUnderInntektsGrense(BigDecimal inntektsgrense, BigDecimal inntekt) {
@@ -200,10 +182,5 @@ public class ForskuddBeregningImpl implements ForskuddBeregning {
   private static BigDecimal settInntektsgrense(SivilstandKode sivilstandKode, BigDecimal inntektsgrenseEnslig75Prosent,
       BigDecimal inntektsgrenseGift75Prosent) {
     return sivilstandKode.equals(ENSLIG) ? inntektsgrenseEnslig75Prosent : inntektsgrenseGift75Prosent;
-  }
-
-  // Sjekker om søknadsbarnet bor hjemme
-  private Integer soknadsbarnBorHjemme(BostatusKode bostatusKode) {
-    return BostatusKode.MED_FORELDRE.equals(bostatusKode) ? 1 : 0;
   }
 }
